--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "date-fns": "^4.1.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
     "prop-types": "^15.8.1",
